# WQTG-guanggao

./: .gitignore  README.md  WQTG-guanggao.spec  build.spec  build_windows.ps1  main.py  patch_update_profile_all_strict_v17_20260525.py  please-ignore  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  万青TG群发任务.spec  万青TG自动回复.spec
.github/workflows/: ci.yml
app/: __init__.py
app/browser_runtime/: __init__.py  fingerprint.py  manager.py  protocol.py  worker.py  workflow.py
app/core/: __init__.py  audit.py  config_loader.py  context.py  (+15 more)
config/: settings.json
data/: users.json
docs/: atomic_profile_steps.md  telegram_automation_locator_guide.md
hooks/: runtime_playwright.py
scripts/: install.ps1  sync-main.ps1
tests/: conftest.py  test_accounts.py  test_atomic_profile_step_contract.py  test_authenticated_proxy_bridge.py  test_automation_hardening.py  test_behavior_locator_bridge.py  test_behavior_locator_sync.py  test_browser_policy.py  test_calibration_picker_injection.py  test_entity_unresolved_classification.py  test_environment.py  test_groups.py  test_gui_smoke.py  test_locator_calibration_resilience.py  test_locator_explicit_mode.py  test_locator_mode_gui.py  test_locator_proxy_safety.py  test_no_legacy.py  test_playwright_pump.py  test_playwright_smoke.py  test_profile_behavior_integration.py  test_profile_behavior_workflow.py  test_proxy_and_policy.py  test_proxy_calibration_hotfix.py  test_security.py  test_strict_static_proxy_boundary.py  test_telegram_entity_resolver.py
tools/: apply_dynamic_proxy_cleanup.py
(+87 files in other folders)
