[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wqtg-browser-native"
version = "2.0.0"
description = "Browser-native Telegram workspace with strict account isolation"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7,<7",
  "playwright>=1.49,<2",
  "requests>=2.32,<3",
  "PySocks>=1.7,<2",
  "cryptography>=44,<47",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
